--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "webgl",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/main.js",
+  "source": "src/index.ts",
   "author": "kharenzze",
   "license": "MIT",
-  "private": false
+  "scripts": {
+    "watch": "parcel watch",
+    "build": "parcel build"
+  },
+  "devDependencies": {
+    "parcel": "next"
+  }
 }
