--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@parcel/config-default": "^2.0.0-alpha.3",
+    "@parcel/transformer-glsl": "^2.0.0-nightly.2048",
     "parcel": "next"
   }
 }
